Add new image files to the public/img directory
- Added 1.png, 2.png, and 3.png images to the public/img directory.
- Included 3.jpg image in the same directory.
- All images are in binary format and contain metadata.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -41,6 +42,7 @@
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
     "@react-three/postprocessing": "latest",
+    "@types/nodemailer": "^7.0.4",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -57,6 +59,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.7",
     "next-themes": "latest",
+    "nodemailer": "^7.0.11",
     "postprocessing": "6.38.0",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
